# nazgul

./: .gitignore  AMR2D_PLL.py  CLAUDE.md  GPPA_realistic_sim_images.py  README.md  bird_watcher_env.yaml  compare_cm_part.py  generate_particle_lens.py  generate_particle_lens_dom.py  generate_particle_lens_sub.py  lens_part.py  lens_part_los.py  lib_cosmo.py  masking.py  model_sim_lens.py  nazgul_env.yaml  particle_galaxy.py  particle_lenses.py  project_gal.py  project_gal_AMR.py  pyproject.toml  test_AnlVsNumLOS.py  test_generate_particle_lens.py  test_generate_particle_lens_LOS.py  test_lens_part.py
src/nazgul/: AMR2D_PLL.py  anl_test_SIE.py  anl_test_SIS.py  basic_gal.py  check_chi2_res.py  check_part_gal_res.py  combined_modelling_result.py  combined_modelling_results.py  combined_modelling_results_one_lens.py  comp_sersic_analosis.py  compare_cm_part.py  compute_axis_ratio.py  configurations.py  create_all_lenses.py  create_many_lenses.py  fit_ellipses.py  fnct.py  generate_particle_lens.py  generate_particle_lens_dom.py  generate_particle_lens_sub.py  get_gal_indexes.py  isodens.py  isodens_stat.py  kappa_isocontVSlensmodel.py  lens_part.py  lens_part_LOS.py  lens_part_los.py  lib_cosmo.py  likelihood.py  likelihood_z_source.py  los_res_study.py  masking.py  memory_leak_tools.py  model_ext_shear.py  model_ext_shear_g12.py  model_fitLOS_fixedOD.py  model_sim_lens.py  modelling_2sis.py  modelling_severals.py  modelling_severals_wLOS.py  (+28 more)
src/nazgul/Modelling/: lib_models.py  model_allLOS.py  model_ext_shear.py  model_ext_shear_g12.py  model_fitLOS.py  (+9 more)
(+73 files in other folders)
